--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
 uvicorn = {extras = ["standard"], version = "^0.30.6"}
 sqlalchemy = "^2.0.35"
+sqlmodel = "^0.0.22"
 
 
 [build-system]
